# evergreen-memory-lite

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Open Latest Output.bat  README.md  Run Demo.bat  Run Evergreen Memory Lite.bat  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
data/synthetic/: sample_family_trip_note.md  sample_household_task.md  sample_receipt_note.md
data/synthetic_inbox/: README.md  legacy.doc  sample_docx.docx  sample_note.md  sample_note.txt
docs/: architecture.md  codex_for_oss_application_notes.md  document_intake.md  household_admin.md  launcher.md  maintainer_workflow.md  privacy_model.md  release_checklist.md  roadmap.md  search.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md
inbox/: put-docx-pdf-txt-md-files-here.txt
src/evergreen_memory_lite/: __init__.py  cards.py  dashboard.py  household.py  intake.py  launcher.py  privacy.py  registry.py  runner.py  search.py
tests/: test_dashboard_launcher.py  test_household.py  test_intake.py  test_privacy.py  test_registry.py  test_repository_safety.py  test_runner.py  test_search.py
