[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evergreen-memory-lite"
version = "0.1.0"
description = "Windows-first, privacy-tiered local memory starter kit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EvergreenAIlab" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
evergreen-memory-lite = "evergreen_memory_lite.runner:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
